Major bug fixes. Level loading is far more consistent since ushort to float conversions for mesh info has been fixed. Issue came from the psq_lx instruction. Turns out that the 6 / 8 in the VCD table is acutally the scale for vertices / uvs, not a count of things. Also fixed reimporting maps from dumped archives but at the expense of a -11% compression ratio.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2 -s -ffunction-sections -fdata-sections -Wl,--gc
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+OPTION(BUILD_TESTS OFF)
+
 # ASSIMP
 SET(ASSIMP_BUILD_TESTS OFF)
 SET(BUILD_SHARED_LIBS OFF)
@@ -20,10 +22,14 @@ SET(ASSIMP_INSTALL OFF )
 
 # Add source files
 file(GLOB_RECURSE SOURCE_FILES 
-	${CMAKE_SOURCE_DIR}/src/*.c
-	${CMAKE_SOURCE_DIR}/src/*.cpp
-	${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c
-	)
+    ${CMAKE_SOURCE_DIR}/src/Commands/*.c*
+    ${CMAKE_SOURCE_DIR}/src/Compressors/*.c*
+    ${CMAKE_SOURCE_DIR}/src/FileTypes/*.c*
+    ${CMAKE_SOURCE_DIR}/src/IO/*.c*
+    ${CMAKE_SOURCE_DIR}/src/main.cpp
+    ${CMAKE_SOURCE_DIR}/src/StbImpl.cpp
+    ${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c
+)
 
 add_subdirectory(dependencies/spdlog)
 add_subdirectory(dependencies/assimp)
@@ -58,3 +64,43 @@ else()
 endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE assimp glfw)
+
+if (${BUILD_TESTS})
+    message("Building tests")
+    file(GLOB_RECURSE TEST_SOURCE 
+        "${CMAKE_SOURCE_DIR}/src/Commands/*.c*"
+        "${CMAKE_SOURCE_DIR}/src/Compressors/*.c*"
+        "${CMAKE_SOURCE_DIR}/src/FileTypes/*.c*"
+        "${CMAKE_SOURCE_DIR}/src/IO/*.c*"
+        "${CMAKE_SOURCE_DIR}/src/StbImpl.cpp"
+        "${CMAKE_SOURCE_DIR}/src/UnitTests/*.cpp"
+        "${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c"
+        "${CMAKE_SOURCE_DIR}/src/test.cpp")
+
+    add_executable(${PROJECT_NAME}_Tests ${TEST_SOURCE})
+
+    # Define the include DIRs
+    target_include_directories(${PROJECT_NAME}_Tests PRIVATE
+        "${CMAKE_SOURCE_DIR}/include"
+        "${CMAKE_SOURCE_DIR}/dependencies/glfw/include"
+        "${CMAKE_SOURCE_DIR}/dependencies/glad/include"
+        "${CMAKE_SOURCE_DIR}/dependencies/assimp/include"
+        "${CMAKE_SOURCE_DIR}/dependencies/spdlog/include"
+        "${CMAKE_SOURCE_DIR}/dependencies/stb"
+        "${CMAKE_SOURCE_DIR}/dependencies/glm"
+        "${CMAKE_SOURCE_DIR}/dependencies/fpng/src" # please separate your source and include folders
+    )
+
+    if (MSVC OR WINDOWS_BUILD)
+
+        message("Windows build")
+        add_definitions(/FI"PCH.h") # MSVC really didnt like me having a pch
+        target_compile_options(${PROJECT_NAME}_Tests PRIVATE "/utf-8")
+    else()
+        target_precompile_headers(${PROJECT_NAME}_Tests PRIVATE
+            "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/PCH.h>"
+        )
+    endif()
+
+    target_link_libraries(${PROJECT_NAME}_Tests PRIVATE assimp glfw)
+endif()
