Fixed texture creation which crahsed on nvidia cards

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2 -s -ffunction-sections -fdata-sections -Wl,--gc
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 OPTION(BUILD_TESTS OFF)
+OPTION(NO_BUILD_DISPLAY OFF)
 
 # ASSIMP
 SET(ASSIMP_BUILD_TESTS OFF)
@@ -28,13 +29,19 @@ file(GLOB_RECURSE SOURCE_FILES
     ${CMAKE_SOURCE_DIR}/src/IO/*.c*
     ${CMAKE_SOURCE_DIR}/src/main.cpp
     ${CMAKE_SOURCE_DIR}/src/StbImpl.cpp
-    ${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c
 )
 
 add_subdirectory(dependencies/spdlog)
 add_subdirectory(dependencies/assimp)
-add_subdirectory(dependencies/glfw)
-add_subdirectory(dependencies/glm)
+
+set(INCLUDE_LIBRARIES assimp)
+if (NOT ${NO_BUILD_DISPLAY})
+    add_library(glad ${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c)
+    target_include_directories(glad PRIVATE "${CMAKE_SOURCE_DIR}/dependencies/glad/include")
+    add_subdirectory(dependencies/glfw)
+    set(INCLUDE_LIBRARIES ${INCLUDE_LIBRARIES} glad glfw)
+    message("Building display")
+endif()
 
 # Define the link libraries
 message("Compiling with flags '${CMAKE_CXX_FLAGS}'")
@@ -63,7 +70,10 @@ else()
     )
 endif()
 
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp glfw)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${INCLUDE_LIBRARIES})
+if (${NO_BUILD_DISPLAY})
+    target_compile_definitions(${PROJECT_NAME} PRIVATE NO_BUILD_DISPLAY)
+endif()
 
 if (${BUILD_TESTS})
     message("Building tests")
@@ -102,5 +112,5 @@ if (${BUILD_TESTS})
         )
     endif()
 
-    target_link_libraries(${PROJECT_NAME}_Tests PRIVATE assimp glfw)
+    target_link_libraries(${PROJECT_NAME}_Tests PRIVATE assimp glfw glad)
 endif()
