Improved command system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(ASSIMP_INSTALL OFF )
 SET(ASSIMP_BUILD_ALL_EXPORTERS_BY_DEFAULT OFF)
 SET(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF)
 SET(ASSIMP_BUILD_FBX_IMPORTER ON)
+SET(ASSIMP_BUILD_FBX_EXPORTER ON)
 SET(ASSIMP_BUILD_GLTF_IMPORTER ON)
 SET(ASSIMP_BUILD_GLTF_EXPORTER ON)
 
@@ -28,7 +29,7 @@ file(GLOB_RECURSE SOURCE_FILES
     ${CMAKE_SOURCE_DIR}/src/Compressors/*.c*
     ${CMAKE_SOURCE_DIR}/src/FileTypes/*.c*
     ${CMAKE_SOURCE_DIR}/src/IO/*.c*
-    ${CMAKE_SOURCE_DIR}/src/Utility/*.c*
+    ${CMAKE_SOURCE_DIR}/src/core/*.c*
     ${CMAKE_SOURCE_DIR}/src/main.cpp
     ${CMAKE_SOURCE_DIR}/src/StbImpl.cpp
 )
