Made map viewer optional component. Updated readme to fix command examples oversight.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(SPME)
 
 # Compiler Settigns
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_FLAGS_RELEASE "-O2 -s -ffunction-sections -fdata-sections -Wl,--gc-sections")
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 OPTION(BUILD_TESTS OFF)
+OPTION(BUILD_VIEWER OFF)
 
 # ASSIMP
 SET(ASSIMP_BUILD_TESTS OFF)
@@ -36,13 +36,6 @@ file(GLOB_RECURSE SOURCE_FILES
 add_subdirectory(dependencies/assimp)
 add_subdirectory(dependencies/yaml-cpp)
 
-set(INCLUDE_LIBRARIES assimp)
-add_library(glad ${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c)
-target_include_directories(glad PRIVATE "${CMAKE_SOURCE_DIR}/dependencies/glad/include")
-add_subdirectory(dependencies/glfw)
-set(INCLUDE_LIBRARIES ${INCLUDE_LIBRARIES} glad glfw yaml-cpp)
-message("Building display")
-
 # Define the link libraries
 message("Compiling with flags '${CMAKE_CXX_FLAGS}'")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
@@ -59,18 +52,25 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     "${CMAKE_SOURCE_DIR}/dependencies/yaml-cpp/include"
 )
 
-if (MSVC OR WINDOWS_BUILD)
+target_precompile_headers(${PROJECT_NAME} PRIVATE
+    "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/PCH.h>"
+)
 
-    message("Windows build")
-    add_definitions(/FI"PCH.h") # MSVC really didnt like me having a pch
-    target_compile_options(${PROJECT_NAME} PRIVATE "/utf-8")
+target_link_libraries(${PROJECT_NAME} PRIVATE assimp yaml-cpp)
+
+if (BUILD_VIEWER) 
+
+    message("Building viewer")
+    add_subdirectory(dependencies/glfw)
+
+    add_library(glad ${CMAKE_SOURCE_DIR}/dependencies/glad/src/glad.c)
+    target_include_directories(glad PRIVATE "${CMAKE_SOURCE_DIR}/dependencies/glad/include")
+
+    target_link_libraries(${PROJECT_NAME} PRIVATE glad glfw)
 else()
-    target_precompile_headers(${PROJECT_NAME} PRIVATE
-        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/PCH.h>"
-    )
+    message("Not building viewer")
+    # target_compile_options(${PROJECT_NAME} PRIVATE SPME_NO_VIEWER)
 endif()
-
-target_link_libraries(${PROJECT_NAME} PRIVATE ${INCLUDE_LIBRARIES})
 
 if (${BUILD_TESTS})
     message("Building tests")
@@ -97,16 +97,9 @@ if (${BUILD_TESTS})
         "${CMAKE_SOURCE_DIR}/dependencies/fpng/src" # please separate your source and include folders
     )
 
-    if (MSVC OR WINDOWS_BUILD)
-
-        message("Windows build")
-        add_definitions(/FI"PCH.h") # MSVC really didnt like me having a pch
-        target_compile_options(${PROJECT_NAME}_Tests PRIVATE "/utf-8")
-    else()
-        target_precompile_headers(${PROJECT_NAME}_Tests PRIVATE
-            "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/PCH.h>"
-        )
-    endif()
+    target_precompile_headers(${PROJECT_NAME}_Tests PRIVATE
+        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_SOURCE_DIR}/include/PCH.h>"
+    )
 
     target_link_libraries(${PROJECT_NAME}_Tests PRIVATE assimp glfw glad)
 endif()
